[project]
name = "dglab-vrc"
version = "0.1.0"
description = ""
authors = [
    {name = "phillychi3",email = "phillychi3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dglabv3 (>=0.2.4,<0.3.0)",
    "python-osc (>=1.9.3,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
